# tanggotyou

./: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT.md  Dockerfile  GITHUB_PAGES.md  QUICK_DEPLOY.md  README.md  check-deploy.sh  docker-compose.yml  fly.toml  railway.json  render.yaml  start-docker.sh
.github/workflows/: ci.yml  deploy-docker.yml  deploy-railway.yml  deploy-render.yml  pages.yml
docs/: CNAME  README.md  index.html
docs/js/: api-key.js  chat.js  config.js  gojuon-data.js  gojuon.js
src/: main.rs
src/models/: gojuon.rs  mod.rs
src/routes/: chat.rs  gojuon.rs  mod.rs
src/services/: openai.rs
src/templates/: index.html
static/js/: chat.js  gojuon.js  speech.js
templates/: index.html
